--- a/Zombies Interactive/Base.lproj/Main.storyboard
+++ b/Zombies Interactive/Base.lproj/Main.storyboard
@@ -295,8 +295,43 @@ Good luck.</string>
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mZ9-rc-3Cv">
+                                <rect key="frame" x="113" y="454" width="89" height="30"/>
+                                <state key="normal" title="Lamp(true)"/>
+                                <connections>
+                                    <action selector="btn_pushLampT:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="Hbb-bJ-OIu"/>
+                                </connections>
+                            </button>
+                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zgj-ys-ieW">
+                                <rect key="frame" x="214" y="454" width="90" height="30"/>
+                                <state key="normal" title="Lamp(false)"/>
+                                <connections>
+                                    <action selector="btn_pushLampF:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="0sa-tB-HoD"/>
+                                </connections>
+                            </button>
+                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Fz0-HS-4SB">
+                                <rect key="frame" x="113" y="492" width="90" height="30"/>
+                                <state key="normal" title="Lamp(post)"/>
+                                <connections>
+                                    <action selector="btn_pushLampPost:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="pSw-il-TMQ"/>
+                                </connections>
+                            </button>
+                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nlP-86-Vg2">
+                                <rect key="frame" x="211" y="492" width="93" height="30"/>
+                                <state key="normal" title="Lamp(!post)"/>
+                                <connections>
+                                    <action selector="btn_pushLampPostF:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="L8h-Yy-Rdt"/>
+                                </connections>
+                            </button>
+                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ldq-bm-3sL">
+                                <rect key="frame" x="16" y="454" width="85" height="30"/>
+                                <state key="normal" title="Start Loc"/>
+                                <connections>
+                                    <action selector="btn_startLocUpdate:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="eBt-VN-3RQ"/>
+                                </connections>
+                            </button>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="TD2-NT-Tqh" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" constant="-20" id="1Ud-x4-RMH"/>
                             <constraint firstItem="yVR-oT-Kmv" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" constant="203" id="59w-JL-8Gm"/>
